--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ flask = "^1.0"
 flake8 = "^3.7"
 Flask-CacheBuster = "^1.0"
 alembic = "^1.0"
+flask-login = "^0.4.1"
 
 [tool.poetry.dev-dependencies]
 
